--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -251,15 +251,13 @@ h1 {
 
 .content-grid {
     --padding-inline: 1rem;
+    --min-width: calc(100% - (var(--padding-inline) * 2));
     --max-width: 120ch;
-    /* Define content width */
     --breakout-max-width: 125ch;
-    /* Breakout should be wider than content */
     --breakout-size: calc((var(--breakout-max-width) - var(--max-width)) / 2);
-
     display: grid;
     grid-template-columns:
-        [full-width-start] minmax(var(--padding-inline), 1fr) [breakout-start] minmax(0, var(--breakout-size)) [content-start] min(100% - (var(--padding-inline) * 2), var(--max-width)) [content-end] minmax(0, var(--breakout-size)) [breakout-end] minmax(var(--padding-inline), 1fr) [full-width-end];
+        [full-width-start] minmax(var(--padding-inline), 1fr) [breakout-start] minmax(0, var(--breakout-size)) [content-start] min(var(--min-width), var(--max-width)) [content-end] minmax(0, var(--breakout-size)) [breakout-end] minmax(var(--padding-inline), 1fr) [full-width-end];
 }
 
 .content-grid> :not(.breakout, .full-width) {
