--- a/src/components/Sections/Stats/TwoColumnStats/style.css
+++ b/src/components/Sections/Stats/TwoColumnStats/style.css
@@ -36,10 +36,17 @@
 .two_column_stat__image_wrapper>img {
     width: 100%;
     height: 100%;
+    max-height: 300px;
 }
 .two_column_stat__image_wrapper {
     max-width: 500px;
-    height: 300px;
+    height: 100%;
+}
+
+.two_column_stat__description ul {
+    list-style-type: circle;
+    margin-left: var(--size-4);
+    margin-block: var(--size-2);
 }
 @media (min-width: 768px) {
     .two_column_stat__wrapper {
