fix: Update site URL references and improve layout styles; adjust padding, grid structures, and responsive behaviors across various components

--- a/src/components/PageNavigation/FloatingPill/FloatingPill.astro
+++ b/src/components/PageNavigation/FloatingPill/FloatingPill.astro
@@ -58,7 +58,7 @@ const pageLinks = links.map((link) =>
                     classlist="floating-pill-nav__logo-image"
                     size="small"
                 />
-                <span class="floating-pill-nav__logo-text">{title}</span>
+                <!-- <span class="floating-pill-nav__logo-text">{title}</span> -->
             </a>
             <menu
                 class="floating-pill-nav__menu"
