--- a/src/components/Cards/Basic/basic.css
+++ b/src/components/Cards/Basic/basic.css
@@ -1,7 +1,7 @@
 .basic_card {
     display: grid;
     gap: var(--size-3);
-    padding: var(--size-8) 0;
+    padding-top: var(--size-8);
     width: 100%;
     max-width: 100%;
 }
