--- a/src/components/Hero/BigName/hero.css
+++ b/src/components/Hero/BigName/hero.css
@@ -16,7 +16,7 @@
 .big_name_hero__content h1 {
     color: var(--clr-primary-darker);
     font-size: var(--heading-xl);
-    max-width: 15ch;
+    max-width: 25ch;
     text-transform: uppercase;
     line-height: 0.9;
 }
@@ -28,7 +28,7 @@
 
     width: 100%;
     height: 100%;
-    background: hsl(90 0% 99% / 0.5);
+    background: oklch(from var(--clr-primary-lighter) l c h / 0.15);
 }
 
 .big_name_hero__image {
@@ -42,7 +42,7 @@
     grid-row: 1 / -1;
 
     z-index: -1;
-    object-position: 25% center !important;
+    object-position: 55% center !important;
 }
 
 .big_name_hero>.content-grid {
@@ -55,6 +55,7 @@
     align-items: center;
     z-index: 3;
 }
+
 .big_name_hero[data-centered="true"] .big_name_hero__wrapper {
     height: 100%;
 }
@@ -83,12 +84,14 @@
         justify-content: space-between;
         z-index: 10;
     }
+
     .big_name_hero[data-centered="true"] .big_name_hero__wrapper {
         height: 100%;
     }
+
     .big_name_hero[data-centered="true"] .big_name_hero__content {
         justify-self: start;
-        text-align: left    ;
+        text-align: left;
     }
 
     .big_name_hero__image,
@@ -96,11 +99,13 @@
         grid-column: 1 / -1;
         grid-row: 1 / -1;
         width: 100%;
-        height: 600px;
+        height: 100vh;
+        max-height: 600px;
     }
 
     .big_name_hero__image {
         z-index: -1;
+        object-position: 75% center !important;
     }
 
     .big_name_hero__content {
