--- a/src/components/Sections/Contact Sections/TwoColumnContact/contact.css
+++ b/src/components/Sections/Contact Sections/TwoColumnContact/contact.css
@@ -10,6 +10,15 @@
     height: 100%;
 }
 
+.two_column_contact__body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--size-4);
+}
+.two_column_contact__body h3 {
+    font-size: var(--heading-large);
+}
 @media (min-width: 768px) {
     .two_column_contact__content {
         /* --col-count: 12;
@@ -24,12 +33,12 @@
         padding: 0;
         margin: var(--container-padding-block) auto; */
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 350px;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: 1fr;
     }
     
 
-    .two_column_contact__content article {
+    .two_column_contact__body {
         grid-column: 1 / 2;
 
         display: flex;
@@ -38,24 +47,12 @@
         gap: var(--size-4);
     }
 
-    .two_column_contact__content article h2 {
-        font-size: var(--heading-medium);
-    }
-
     .two_column_contact__location {
         grid-column: 2 / -1;
         grid-row: 1 / -1;
-    }
 
-    .two_column_contact__location .location :first-child {
-        font-size: var(--heading-small);
-    }
-
-    .two_column_contact__cta {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        margin-top: var(--size-8);
-        padding: var(--size-8);
-        background-color: var(--clr-secondary-dark);
+        grid-template-rows: auto 350px;
+        gap: var(--size-2);
     }
 }
