--- a/src/components/Sections/Section/section.css
+++ b/src/components/Sections/Section/section.css
@@ -2,6 +2,7 @@
     padding-block: var(--container-padding-block);
     content-visibility: auto;
 }
+
 .content_section__content_wrapper {
     display: flex;
     flex-direction: column;
@@ -12,7 +13,8 @@
     font-size: var(--heading-xl);
 }
 
-.content_section__content ul {
+.content_section__content ul,
+.content_section__content ol {
     margin-left: var(--size-4);
 }
 
@@ -21,13 +23,14 @@
     flex-direction: column;
     gap: var(--size-3);
 }
+
 .content_section__content {
     display: flex;
     flex-direction: column;
     gap: var(--size-2);
 }
 
-.content_section__content > * {
+.content_section__content>* {
     line-height: 1.5;
 }
 
@@ -35,20 +38,26 @@
     width: 100%;
     height: 100%;
 
-    max-height: max-content;
+    /* max-height: max-content; */
 }
+
 .content_section__image {
     max-height: 400px;
-    width: auto;
+    width: 100%;
+    height: 100%;
 }
 
 /* Tablet and up */
 @media (min-width: 800px) {
     .content_section__content_wrapper {
         display: grid;
-        grid-template-columns: repeat(2, 50%);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
         align-items: center;
         gap: var(--size-8);
+    }
+
+    .content_section__image_wrapper {
+        grid-column: 2 / -1;
     }
 }
