--- a/src/components/PageNavigation/FloatingPill/FloatingPill.astro
+++ b/src/components/PageNavigation/FloatingPill/FloatingPill.astro
@@ -9,7 +9,7 @@ interface Props {
     blackText: boolean;
     fixedMenu: boolean;
     data: {
-        links: [string];
+        links: string[];
         logo: {
             [key: string]: string;
         };
