--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -206,6 +206,7 @@ console.log(`${record.finalUrl}/assets/${logoSrc}.webp`,)
 				operating_hours={record.expand.operating_hours}
 				social_links={record.expand.social_links}
 				style={record.contact_style}
+				location_info={record.expand.location}
 			/>
 		</main>
 		<Footer
