--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,6 +61,7 @@ const { country, themeColor } = await fetchPage(1, [
 		<script src="@utils/navigationEvents.ts"></script>
 	</head>
 	<body>
+		<PageNavigation />
 		<!-- <PageNavigation
 			links={record.links}
 			logo={record.expand.logo}
