--- a/src/components/PageNavigation/PageNavigation.astro
+++ b/src/components/PageNavigation/PageNavigation.astro
@@ -1,7 +1,10 @@
 ---
 import { fetchPage } from "@utils/payload";
+import type { HeroBlock } from "@utils/payload/types";
 
-const {navigation} = await fetchPage(1, ["navigation"])
+const {navigation, blocks, country, title} = await fetchPage(1, ["navigation", "blocks", "country", "title"])
+const hero: HeroBlock = blocks.find(block => block.blockType === 'simple-hero') || {} as HeroBlock
+console.log(`Hero Type: ${hero.type}`);
 // import BasicFLoatingNav from "@components/PageNavigation/Navigation/FixedNav/FixedNav.astro";
 // import FloatingPill from "@components/PageNavigation/FloatingPill/FloatingPill.astro";
 import StickyNav from "@components/PageNavigation/StickyNav/StickyNav.astro";
@@ -10,26 +13,22 @@ import SimpleNav from "./SimpleNav/SimpleNav.astro";
 // import CenterNav from "./CenterNav/CenterNav.astro";
 import FloatingPill from "./FloatingPill/FloatingPill.astro";
 const props = Astro.props;
-const hero_style = props.hero_style
 
-console.log({hero_style});
 
-const blackText =
-    props.hero_style === "two column" || props.hero_style === "two square" || props.hero_style === "blocky";
-
-const fixedMenu = ["horizontal with image", "black modern", "gradient", "default", "default horizontal", "big name"].includes(props.hero_style) ? true : false;
-const showSimpleNav = ["alternate vertical", "default vertical", "two column"].includes(hero_style)
-const showPillNav = ["default", "big name"].includes(hero_style)
+const fixedMenu = ["horizontal with image", "black modern", "gradient", "default", "default horizontal", "big name"].includes(hero.type) ? true : false;
+const showSimpleNav = ["alternate vertical", "default vertical", "two column", "stylised horizontal"].includes(hero.type)
+const showPillNav = ["default", "big name"].includes(hero.type)
 
 const navProps = {
-    data: props,
+    title,
+    navigation,
+    country,
     fixedMenu: fixedMenu,
-    blackText: blackText,
-    country: props.country,
 }
 ---
 <!-- <StickyNav {...navProps}/> -->
 
-<!-- {showSimpleNav && <SimpleNav {...navProps}/>}
+{showSimpleNav && <SimpleNav {...navProps}/>}
+<!-- 
 
 {showPillNav && <FloatingPill {...navProps}/>} -->
